# versions_and_features

./: Cargo.toml  README.md  WORKSPACE.bazel
cargo/: crates.bzl
cargo/remote/: BUILD.jpeg-decoder-0.1.22.bazel  BUILD.nom-6.2.1.bazel  BUILD.os_str_bytes-3.1.0.bazel  BUILD.regex-1.4.6.bazel  BUILD.sqlformat-0.1.6.bazel  BUILD.unicode_categories-0.1.1.bazel
crates/: BUILD.bazel
src/: lib.rs
